Fixed column spacing errors in eboard pictures.

--- a/scss/components/_eboard.scss
+++ b/scss/components/_eboard.scss
@@ -15,5 +15,5 @@
 }
 .member p {
     padding-bottom: 10px;
-    word-wrap: normal;
+    height: 50px;
 }
