--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -8,6 +8,6 @@
     text-shadow: 2px 2px $ieee-black;
 }
 .ieee-logo {
-    max-width: 150%;
-    max-height: 150%;
+    max-width: 140%;
+    max-height: 140%;
 }
